Optimize mobile view plugin list